# structured-evals

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/actions/: main.yaml
.github/workflows/: build.yaml  coverage.yaml  lint-and-test.yaml  main.yaml
data/: example_real_schema.jsonl  franc_loans_schema.yaml  sample.json  sample.jsonl  sample_extra_missing.jsonl  sample_franc_loans.json
examples/: eval_infer_structure.py  eval_yaml_generations.py  run_eval_infer_structure.py
sevals/: __init__.py  aggregations.py  base.py  eval_batch.py  eval_dict.py  eval_primitive.py  eval_text.py  parsing.py
src/structured_evals/: __init__.py  aggregations.py  base.py  cli.py  eval_batch.py  eval_dict.py  eval_enum.py  eval_list.py  eval_llm_as_judge.py  eval_primitive.py  eval_text.py  infer_from_schema.py  infer_from_targets.py  infer_structure.py  loader.py  ngram_score_fn.py  parsing.py  report.py
tests/: test_aggregations.py  test_eval_batch.py  test_eval_dict.py  test_eval_enum.py  test_eval_list.py  test_eval_llm_as_judge.py  test_eval_primitive.py  test_eval_textual_metric.py  test_infer_from_targets.py  test_infer_structure.py  test_loader.py  test_parsing.py
