[project]
name = "structured-evals"
version = "0.1.0"
description = "Evaluation of LLMs' structured outputs"
readme = "README.md"
authors = [
    { name = "jakub.binkowski", email = "jakub.binkowski@pwr.edu.pl" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "pyyaml>=6.0.2",
    "torchmetrics>=1.8.1",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.10.3",
    "mypy>=1.17.1",
    "pip>=25.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.coverage.run]
source_pkgs = ["sevals", "tests"]
branch = true
parallel = false
omit = []

[tool.coverage.paths]
structured_evals = ["sevals"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
